--- a/index.html
+++ b/index.html
@@ -3,29 +3,131 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>剪创工具导航</title>  
+    <title>剪创探索工具导航</title>  
     <script src="https://cdn.tailwindcss.com"></script>  
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.4.0/flowbite.min.css" rel="stylesheet" />  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.4.0/flowbite.min.js"></script>  
     <style>  
         body {  
             background: linear-gradient(135deg, #f3f4f6, #e5e7eb);  
-            animation: backgroundAnimation 10s infinite alternate;  
+            font-family: 'Roboto', sans-serif;  
+            color: #333;  
+            margin: 0;  
+            padding: 0;  
         }  
-        @keyframes backgroundAnimation {  
-            0% { background-color: #f3f4f6; }  
-            100% { background-color: #e5e7eb; }  
+        .header {  
+            background: rgba(255, 255, 255, 0.9);  
+            backdrop-filter: blur(10px);  
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
+            padding: 20px;  
+            position: relative;  
+            z-index: 10;  
         }  
-        .hover\:scale-110:hover {  
-            transform: scale(1.1);  
-        }  
-        .numbered-title {  
-            font-size: 1.5rem;  
+        .title {  
+            text-align: center;  
+            font-size: 2.5rem; /* Increased font size */  
             font-weight: bold;  
-            color: #3b82f6; /* Tailwind's blue-500 */  
-            margin-right: 0.5rem;  
+            margin-bottom: 20px;  
+            color: #3b82f6;  
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Added shadow for depth */  
+            letter-spacing: 1px; /* Increased letter spacing */  
+        }  
+        .loading-spinner {  
+            display: none;  
+            border: 4px solid #f3f4f6;  
+            border-top: 4px solid #3b82f6;  
+            border-radius: 50%;  
+            width: 24px;  
+            height: 24px;  
+            animation: spin 1s linear infinite;  
+        }  
+        @keyframes spin {  
+            0% { transform: rotate(0deg); }  
+            100% { transform: rotate(360deg); }  
+        }  
+        .button {  
+            border-radius: 30px;  
+            padding: 12px 24px;  
+            transition: transform 0.2s, background 0.2s;  
+            font-weight: bold;  
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
+        }  
+        .search-button {  
+            background: linear-gradient(90deg, #3b82f6, #2563eb);  
+            color: white;  
+        }  
+        .search-button:hover {  
+            transform: scale(1.05);  
+            background: linear-gradient(90deg, #2563eb, #3b82f6);  
+        }  
+        .engine-button {  
+            background: #f97316; /* Orange color for engine search */  
+            color: white;  
+        }  
+        .engine-button:hover {  
+            transform: scale(1.05);  
+            background: #ea580c; /* Darker orange on hover */  
+        }  
+        .input {  
+            border: 1px solid #ccc;  
+            border-radius: 30px;  
+            padding: 12px 20px;  
+            width: 300px; /* Adjusted width for better layout */  
+            transition: border-color 0.2s;  
+            white-space: nowrap; /* Prevent line breaks */  
+            overflow: hidden; /* Prevent overflow */  
+            text-overflow: ellipsis; /* Add ellipsis for overflow text */  
+        }  
+        .input:focus {  
+            border-color: #3b82f6;  
+            outline: none;  
+        }  
+        .link-item {  
+            background: white;  
+            border-radius: 10px;  
+            padding: 20px;  
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);  
+            transition: transform 0.2s, box-shadow 0.2s;  
+        }  
+        .link-item:hover {  
+            transform: translateY(-5px);  
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);  
+        }  
+        .category-container {  
+            background: white;  
+            border-radius: 10px;  
+            padding: 20px;  
+            margin-bottom: 20px;  
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
         }  
     </style>  
+</head>  
+<body>  
+    <header class="header">  
+        <h1 class="title">震撼的工具导航</h1>  
+        <div class="flex items-center justify-center mb-4">  
+            <input type="text" id="engine-search-input" placeholder="输入搜索关键词" class="input mr-2" />  
+            <select id="search-engine" class="input mr-2">  
+                <option value="duckduckgo">DuckDuckGo</option>  
+                <option value="startpage">Startpage</option>  
+                <option value="ecosia">Ecosia</option>  
+                <option value="yandex">Yandex</option>  
+                <option value="bing">Bing</option>  
+                <option value="qwant">Qwant</option>  
+                <option value="google">Google</option>  
+            </select>  
+            <button onclick="performEngineSearch()" class="button engine-button">搜索引擎搜索</button>  
+        </div>  
+        <div class="flex items-center justify-center mb-4">  
+            <input type="text" id="search-input" placeholder="输入网址名称" class="input mr-2" />  
+            <button onclick="performSearch()" class="button search-button">搜索</button>  
+            <button id="clear-button" onclick="clearSearch()" class="button bg-red-500 hover:bg-red-600 hidden">清空</button>  
+        </div>  
+    </header>  
+    <main class="mt-20 p-4">  
+        <div id="navigation" class="max-w-6xl mx-auto p-8"></div>  
+        <div id="loading-spinner" class="loading-spinner mx-auto mt-4"></div>  
+    </main>  
     <script>  
         let navigationData = [];  
 
@@ -34,30 +136,32 @@
         }  
 
         function loadNavigationData() {  
+            const spinner = document.getElementById('loading-spinner');  
+            spinner.style.display = 'block'; // Show loading spinner  
             fetch('https://raw.githubusercontent.com/shimuchong/-/main/Website%20Navigation%20Data%20JSON.json')  
                 .then(response => response.json())  
                 .then(data => {  
                     navigationData = data;  
                     loadNavigation(navigationData);  
                 })  
-                .catch(error => console.error('加载数据时出错:', error));  
+                .catch(error => console.error('加载数据时出错:', error))  
+                .finally(() => {  
+                    spinner.style.display = 'none'; // Hide loading spinner  
+                });  
         }  
 
         function loadNavigation(data) {  
             const container = document.getElementById('navigation');  
             container.innerHTML = '';  
             data.sections.forEach((section, sectionIndex) => {  
-                const sectionDiv = document.createElement('div');  
-                sectionDiv.className = "mt-8 p-4 bg-white rounded-lg shadow-lg transition-transform transform hover:scale-105 duration-300";  
-
                 section.categories.forEach((category, categoryIndex) => {  
-                    const categoryDiv = document.createElement('div');  
-                    categoryDiv.className = "mb-6 p-4 bg-gray-100 rounded-lg shadow-md transition-transform transform hover:scale-110 duration-300";  
-                    
+                    const categoryContainer = document.createElement('div');  
+                    categoryContainer.className = "category-container";  
+
                     const categoryTitle = document.createElement('h3');  
-                    categoryTitle.className = "text-2xl font-semibold text-gray-700 mb-2 flex items-center";  
-                    categoryTitle.innerHTML = `<span class="numbered-title">${sectionIndex + 1}.${categoryIndex + 1}</span>${category.name}`;  
-                    categoryDiv.appendChild(categoryTitle);  
+                    categoryTitle.className = "text-xl font-semibold text-gray-700 mb-2";  
+                    categoryTitle.innerHTML = `${sectionIndex + 1}. ${category.name}`; // Change to simple numbering  
+                    categoryContainer.appendChild(categoryTitle);  
 
                     const linkList = document.createElement('div');  
                     linkList.className = "grid grid-cols-2 gap-4";  
@@ -65,14 +169,13 @@
                         const linkItem = document.createElement('a');  
                         linkItem.href = link.url;  
                         linkItem.target = "_blank";  
-                        linkItem.className = "block p-4 bg-blue-500 text-white rounded-lg shadow hover:bg-blue-600 transition-colors duration-200 text-center transform hover:scale-105";  
+                        linkItem.className = "link-item text-center";  
                         linkItem.innerText = link.name;  
                         linkList.appendChild(linkItem);  
                     });  
-                    categoryDiv.appendChild(linkList);  
-                    sectionDiv.appendChild(categoryDiv);  
+                    categoryContainer.appendChild(linkList);  
+                    container.appendChild(categoryContainer);  
                 });  
-                container.appendChild(sectionDiv);  
             });  
         }  
 
@@ -99,7 +202,7 @@
                     const linkItem = document.createElement('a');  
                     linkItem.href = link.url;  
                     linkItem.target = "_blank";  
-                    linkItem.className = "block p-4 bg-blue-500 text-white rounded-lg shadow hover:bg-blue-600 transition-colors duration-200 text-center transform hover:scale-105";  
+                    linkItem.className = "link-item text-center";  
                     linkItem.innerText = link.name;  
                     container.appendChild(linkItem);  
                 });  
@@ -150,59 +253,6 @@
 
             window.open(searchUrl, '_blank');  
         }  
-    </script>  
-</head>  
-<body class="bg-gray-100">  
-    <div class="bg-white p-4 shadow-md rounded-lg">  
-        <h2 class="text-4xl font-bold mb-2 text-center text-blue-600">自定义搜索</h2>  
-        <div class="flex items-center mb-4 whitespace-nowrap">  
-            <input type="text" id="engine-search-input" placeholder="输入搜索关键词" class="p-2 border border-gray-300 rounded mr-2 w-full" />  
-            <select id="search-engine" class="p-2 border border-gray-300 rounded mr-2">  
-                <option value="duckduckgo">DuckDuckGo</option>  
-                <option value="startpage">Startpage</option>  
-                <option value="ecosia">Ecosia</option>  
-                <option value="yandex">Yandex</option>  
-                <option value="bing">Bing</option>  
-                <option value="qwant">Qwant</option>  
-                <option value="google">Google</option>  
-            </select>  
-            <button onclick="performEngineSearch()" class="p-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors duration-200 whitespace-nowrap">搜索引擎搜索</button>  
-        </div>  
-    </div>  
-    <div class="bg-white p-4 shadow-md mt-4 rounded-lg">  
-        <h2 class="text-4xl font-bold mb-2 text-center text-blue-600">页面内搜索</h2>  
-        <div class="flex items-center mb-4">  
-            <input type="text" id="search-input" placeholder="输入网址名称" class="p-2 border border-gray-300 rounded mr-2 w-full" />  
-            <button onclick="performSearch()" class="p-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors duration-200 whitespace-nowrap">搜索</button>  
-            <button id="clear-button" onclick="clearSearch()" class="p-2 bg-red-500 text-white rounded hover:bg-red-600 transition-colors duration-200 hidden">清空</button>  
-        </div>  
-    </div>  
-    <div id="navigation" class="max-w-6xl mx-auto p-8"></div>  
-    <script>  
-        window.parent.postMessage({ action: "ready" }, "*");  
-
-        window.console = new Proxy(console, {  
-            get(target, prop) {  
-                if (['log', 'warn', 'error'].includes(prop)) {  
-                    return new Proxy(target[prop], {  
-                        apply(fn, thisArg, args) {  
-                            fn.apply(thisArg, args);  
-                            window.parent.postMessage({ action: 'console',  
-                                type: prop,  
-                                args: args.map((arg) => {  
-                                    try {  
-                                        return JSON.stringify(arg).replace(/^["']|["']$/g, '');  
-                                    } catch (e) {  
-                                        return arg;  
-                                    }  
-                                })  
-                            }, '*');  
-                        }  
-                    });  
-                }  
-                return target[prop];  
-            }  
-        });  
     </script>  
 </body>  
 </html>
