--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>  
 <body>  
     <header class="header">  
-        <h1 class="title">震撼的工具导航</h1>  
+        <h1 class="title">剪创探索工具导航</h1>  
         <div class="flex items-center justify-center mb-4">  
             <input type="text" id="engine-search-input" placeholder="输入搜索关键词" class="input mr-2" />  
             <select id="search-engine" class="input mr-2">  
@@ -116,11 +116,11 @@
                 <option value="qwant">Qwant</option>  
                 <option value="google">Google</option>  
             </select>  
-            <button onclick="performEngineSearch()" class="button engine-button">搜索引擎搜索</button>  
+            <button onclick="performEngineSearch()" class="button engine-button">网页搜索</button>  
         </div>  
         <div class="flex items-center justify-center mb-4">  
-            <input type="text" id="search-input" placeholder="输入网址名称" class="input mr-2" />  
-            <button onclick="performSearch()" class="button search-button">搜索</button>  
+            <input type="text" id="search-input" placeholder="输入工具名称" class="input mr-2" />  
+            <button onclick="performSearch()" class="button search-button">工具搜索</button>  
             <button id="clear-button" onclick="clearSearch()" class="button bg-red-500 hover:bg-red-600 hidden">清空</button>  
         </div>  
     </header>  
